# concerts-etl-sa

./: README.md  pyproject.toml
.github/workflows/: daily.yml
.github/workflows/scripts/: diag.py
concerts_etl/: cli.py
concerts_etl/adapters/: __init__.py  dice.py  shotgun.py
concerts_etl/core/: config.py  consolidate_events.py  gsheet.py  logging.py  matching.py  models.py
concerts_etl/storage/: __init__.py  google_sheets.py
