[project]
name = "concerts-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "tenacity>=8.3",
  "pandas>=2.2",
  "playwright>=1.47",
  "gspread>=6.1",
  "google-auth>=2.35",
  "google-auth-oauthlib>=1.2",
  "python-dotenv>=1.0",
]
[project.scripts]
concerts-etl = "concerts_etl.cli:main"
